--- a/Readme.org
+++ b/Readme.org
@@ -1,7 +1,12 @@
 #+TITLE: 混元聖紀 / CK-KZ
 
 #+DATE: 2015-08-29 00:52:24.387261
-* 目次
+* 版本
+ |     CK-KZ|【重刊道藏輯要】|
+ |       HFL|【正統道藏・涵芬樓版】|
+ |      YP-C|【原版道藏輯要】|
+ |      ZTDZ|【正統道藏・三家本】|
+目次
  - [[file:KR5c0166_000.txt][混元聖紀 0]]
  - [[file:KR5c0166_001.txt][混元聖紀 1]]
  - [[file:KR5c0166_002.txt][混元聖紀 2]]
